KFSMI-3811: fix error messages in deposit wizard

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -624,7 +624,7 @@ error.deposit.missingBankAccount=Bank Account Number is required
 error.deposit.unknownBankAccount=Unable to find bank account {0} for bank {1}
 error.deposit.nonDepositedVerifiedCashReceipt=Verified Cash Receipt Document #{0} must be deposited for this to be a final deposit.
 error.deposit.cashDepositDidNotBalance=The cash amount that was deposited {0} did not balance with the currency and coin amount from cash receipts {1}.
-error.deposit.notEnoughCashToCompleteDeposit=The {0} requested for the deposit, ${1}, exceeds the {0} amount in the cash drawer, ${2}.
+error.deposit.notEnoughCashToCompleteDeposit=The {0} requested for the deposit, {1}, exceeds the {0} amount in the cash drawer, {2}.
 error.deposit.cashieringChecksMustBeDeposited=Cashiering Check #{0} must be part of a deposit.
 
 # Deposit Wizard
