--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1053,6 +1053,7 @@ paymentRequest.message.remove.hold.text=Please remove the hold on Payment Reques
 error.paymentRequest.reasonRequired=You must enter a reason for this action.  The reason must be no more than {0} characters long.
 error.paymentRequest.grandTotal.not.positive=The Grand Total must be greater than zero.
 warning.encumber.nextFY=Warning: This purchase order is encumbered for the next fiscal year. AP approval will expense the payment and release encumbrance in the current fiscal year.
+warning.encumber.priorFY=Warning: This purchase order is encumbered for the current fiscal year. Postback rules are such that AP submit will expense the payment and release encumbrance in the prior fiscal year.
 warning.cancel.reOpenPO=Warning: Would you like to re-open the Purchase Order?
 warning.paymentRequest.payDate.over.threshold.days=Warning: The pay date is more than 60 days in the future.
 warning.paymentRequest.vendorInvoiceAmount.invalid=Warning: This payment request total does not match the total entered on the start screen.
@@ -1062,7 +1063,7 @@ paymentRequest.message.remove.cancel.text=Please remove the request to cancel th
 # Payment Request Tax Tab
 errors.paymentRequest.tax.field.required={0} is a required field in the tax area.
 errors.paymentRequest.tax.field.required.if={1} is required to be checked or have a non-empty/zero value if {0} is set to the current value.
-errors.paymentRequest.tax.field.disallowed.if={1} is not allowded to be checked or have a non-empty/zero value if {0} is set to the current value.
+errors.paymentRequest.tax.field.disallowed.if={1} is not allowed to be checked or have a non-empty/zero value if {0} is set to the current value.
 errors.paymentRequest.tax.field.value.invalid.if={1} currently is set to an invalid value with {0} set to the current value.
 errors.paymentRequest.tax.field.value.must.not.negative={0} cannot be set to a negative value.
 errors.paymentRequest.tax.rate.must.zero.if={1} must be set to zero if {0} is set to the current value.
@@ -1115,8 +1116,8 @@ message.duplicate.receivingLine.packingSlipNumber=Packing Slip Number already ex
 message.duplicate.receivingLine.billOfLadingNumber=Bill of Lading Number already exists[br]
 message.receiving.lineitem.return=quantity(ies) returned for the item at line number  
 message.receiving.lineitem.damage=quantity(ies) damaged for the item at line number 
-errors.receivingLine.quantityReturnedGreaterThanQuantityReceived=Cannot specify Quantity Returned that is greater than Quantity Recevied for line {0}.
-errors.receivingLine.quantityDamagedGreaterThanQuantityReceived=Cannot specify Quantity Damaged that is greater than Quantity Recevied for line {0}.
+errors.receivingLine.quantityReturnedGreaterThanQuantityReceived=Cannot specify Quantity Returned that is greater than Quantity Received for line {0}.
+errors.receivingLine.quantityDamagedGreaterThanQuantityReceived=Cannot specify Quantity Damaged that is greater than Quantity Received for line {0}.
 
 # Threshold
 errors.threshold.field.invalid=The specified {0} does not exist
