--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -897,6 +897,9 @@ error.item.unitOfMeasureCode.invalid=The item unit of measure code {0} does not 
 
 errors.item.account.negative=Account: {0} must not be negative.
 error.item.unit.of.measure.code.invalid=The item unit of measure code {0} does not exist.
+
+errors.itemType.quantityBased.isNotAllowedWithAdditionalCharge=Additional Charge items cannot be Quantity Based.
+
 #B2B
 message.b2b.multiple.requisitions=The contents of your shopping cart are not fully listed on this requisition. This occurs when shopping carts contain products from more than one vendor. The other requisitions that were created from this shopping session can be accessed from the action list.
 message.b2b.po.retransmit.success=Purchase Order was resent successfully.
@@ -2234,4 +2237,3 @@ message.report.yearEnd.balanceForwarding.openAccount.ledger.titleLine=O P E N   
 message.report.yearEnd.balanceForwarding.closedAccount.ledger.titleLine=C L O S E D   A C C O U N T   B A L A N C E   F O R W A R D S   S T A T I S T I C S
 message.report.yearEnd.encumbranceForwards.ledger.titleLine=E N C U M B R A N C E   F O R W A R D S   S T A T I S T I C S
 message.report.yearEnd.organizationReversion.ledger.titleLine=O R G A N I Z A T I O N   R E V E R S I O N   S T A T I S T I C S 
-message.report.poster.output.summary.titleLine=Fiscal Year\: {0} Balance Type Code\: {1}
