KFSMI-3059 : modularization cleanup of unit test override beans into non-core files

--- a/build.properties
+++ b/build.properties
@@ -192,8 +192,8 @@ institution.spring.source.files=
 spring.source.files=${core.spring.source.files}${optional.module.spring.source.files}${institution.spring.source.files}
 kfs.rice.override.spring.files=spring-kfs-rice-overrides.xml
 # the core files that are included in the application spring context for unit testing
-core.spring.test.files=SpringBeansTest.xml,org/kuali/kfs/sys/spring-sys-test.xml,org/kuali/kfs/gl/spring-gl-test.xml
-optional.module.spring.test.files=,org/kuali/kfs/sys/spring-purap-test.xml
+core.spring.test.files=org/kuali/kfs/sys/spring-sys-test.xml,org/kuali/kfs/gl/spring-gl-test.xml
+optional.module.spring.test.files=,org/kuali/kfs/module/ar/spring-ar-test.xml,org/kuali/kfs/module/cam/spring-cam-test.xml,org/kuali/kfs/module/purap/spring-purap-test.xml
 # the institution specific files that are included in the application spring context for unit testing
 institution.spring.test.files=
 # all the files that are included in the application spring context for unit testing
@@ -479,3 +479,5 @@ classpath.resource.prefix=/WEB-INF/classes/
 
 periodic.thread.dump=true
 periodic.thread.dump.seconds=300
+
+validate.ebo.references=true
