KULCAP-1271 Asset Add Global - 'Location' tab, no existence check run for 'Off Campus Postal Code' when added. Document can be submitted with a non-existing postal code. Inquiry it from doc search, receive exception:

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2078,6 +2078,8 @@ error.invalid.expected.max.date = Expected Return Date is not allowed to be grea
 error.invalid.loan.return.date = Loan Return Date is not allowed to be before loan date or greater than 2 years from the Loan Date. 
 error.invalid.borrower.state.code = Borrower State code {0} is not valid.
 error.invalid.borrower.storage.state.code = Borrower Storage State code {0} is not valid.
+error.borrower.storage.state.required =  Borrower Storage State code is required for storage country code {0}.
+error.borrower.storage.zip.required =  Borrower Storage Zip code is required for storage country code {0}.
 error.campus.tag.number.required = Tag number must exist on asset edit screen prior to issuing loan document. 
 #***********************************************************
 
