--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -298,6 +298,7 @@ error.cg.oneRequired=At least one {0} is required.
 error.cg.award.proposal.awarded=Proposal {0} has already been awarded.
 error.cg.award.federalPassThroughIndicator.dependency.required={0} is required if {1} is checked.
 error.cg.invalidProjectDirectorStatus=Project Director {0} has an invalid status of {1}.  
+error.cg.notAProjectDirector=Person {0} does not have the Contracts & Grants Project Director role.
 error.cg.proposal.subcontractorNumberRequiredForAdd=The subcontractor number is a required field when adding subcontractors to a proposal.
 
 warning.cg.award.entryDateBeforeStartDate={0} is before {1}. Do you wish to continue?
