KFSMI-3966: make sure accessible titles on quick finders in accounting lines are populated correctly

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2146,6 +2146,7 @@ accounting.line.group.debitTotal.label = Debit Total:
 accounting.line.group.creditTotal.label = Credit Total:
 accounting.line.field.newLine.label = {0} for New {1} Line
 accounting.line.field.line.label = {0} for {1} Line {2}
+accounting.line.quickfinder.accessible.label=Search {0}
 
 accounting.line.actions.balanceInquiry.label = Perform Balance Inquiry for {0} Accounting Line {1}
 accounting.line.actions.delete.label = Delete {0} Accounting Line {1}
