fix Jira KULPURAP-3830

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1954,6 +1954,7 @@ error.asset.location.invalid.capital.asset.number =Capital Asset Number "{0}" is
 error.asset.location.invalid.campus.code = Campus Code "{0}" for Capital Asset "{1}" is not valid.
 error.asset.location.invalid.building.code = Building Code "{0}" is not valid for Campus Code "{1}".
 error.asset.location.invalid.room.code = Building/Room Number "{0}/{1}" is not valid for Campus Code "{2}".
+error.asset.location.invalid.room.code.for.campus = Room Number "{0}" is not valid for Campus Code "{1}".
 error.asset.location.duplicate.tag.number = Tag Number "{0}" is already in use by Asset "{1}". Please use a different tag number for Asset "{2}".
 error.asset.location.duplicate.tag.within.document = Tag Number "{0}" is duplicate within the document. Please use a different tag number for Asset "{1}".
 error.asset.location.no.asset.location.detail.line = Location change must contain at least one new asset location. 
