--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1056,8 +1056,8 @@ paymentRequest.message.hold.text=Please hold the Payment Request now.
 paymentRequest.message.remove.hold.text=Please remove the hold on Payment Request now.
 error.paymentRequest.reasonRequired=You must enter a reason for this action.  The reason must be no more than {0} characters long.
 error.paymentRequest.grandTotal.not.positive=The Grand Total must be greater than zero.
-warning.encumber.nextFY=Warning: This purchase order is encumbered for the next fiscal year. AP approval will expense the payment and release encumbrance in the current fiscal year.
-warning.encumber.priorFY=Warning: This purchase order is encumbered for the current fiscal year. Postback rules are such that AP submit will expense the payment and release encumbrance in the prior fiscal year.
+warning.encumber.nextFY=Warning: This purchase order is encumbered for the next fiscal year. AP approval will expense the payment and release encumbrance in the current fiscal year. Do you want to continue?
+warning.encumber.priorFY=Warning: This purchase order is encumbered for the current fiscal year. Postback rules are such that AP submit will expense the payment and release encumbrance in the prior fiscal year. Do you want to continue?
 warning.cancel.reOpenPO=Warning: Would you like to re-open the Purchase Order?
 warning.paymentRequest.payDate.over.threshold.days=Warning: The pay date is more than 60 days in the future.
 warning.paymentRequest.vendorInvoiceAmount.invalid=Warning: This payment request total does not match the total entered on the start screen.
