KULCAP-1255:Capital Edit on Financial Documents

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2182,9 +2182,10 @@ error.fractional.quanity = Fractional quantity invoiced is allowed only if <1.
 error.merge.with.pretagging = Merge is disallowed because the selected merge lines include more than 1 pre-tagging data entries.
  
 #******** CAB FP Messages ***
-error.asset.do.not.enter.any.data = Asset Information is only required for moveable capital object codes.
+error.asset.do.not.enter.any.data = Asset Information is only allowed for moveable capital object codes.
 error.asset.require.data.entry = Data required for either updating or creating a new asset.
-error.asset.update.allow.only = You cannot create a new asset with this transaction; you must update an existing asset. 
+error.asset.update.allow.only = You cannot create a new asset with this transaction; you must update an existing asset.
+error.asset.create.new.allow.only = When moving an expense from a non-capital object code to capital, your document must create a new asset. Please complete the information in the Create New Assets section on the Capital Edit tab and leave Asset Number blank.
 error.asset.new.or.update.only = Only enter data for either updating or creating a new asset.
 error.asset.active.capital.asset.required = Asset must be active Capital Asset.
 warning.gl.processed = The GL line you selected has been processed to CAMS.
