Accounting line error rendering should work more like errors.tag

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2242,4 +2242,8 @@ message.report.yearEnd.nominalActivityClosing.ledger.titleLine=N O M I N A L   A
 message.report.yearEnd.balanceForwarding.openAccount.ledger.titleLine=O P E N   A C C O U N T   B A L A N C E   F O R W A R D S   S T A T I S T I C S
 message.report.yearEnd.balanceForwarding.closedAccount.ledger.titleLine=C L O S E D   A C C O U N T   B A L A N C E   F O R W A R D S   S T A T I S T I C S
 message.report.yearEnd.encumbranceForwards.ledger.titleLine=E N C U M B R A N C E   F O R W A R D S   S T A T I S T I C S
-message.report.yearEnd.organizationReversion.ledger.titleLine=O R G A N I Z A T I O N   R E V E R S I O N   S T A T I S T I C S 
+message.report.yearEnd.organizationReversion.ledger.titleLine=O R G A N I Z A T I O N   R E V E R S I O N   S T A T I S T I C S
+
+message.accountingLines.errorSectionTitle=Errors found in this Section
+message.accountingLines.warningSectionTitle=Warnings for this Section
+message.accountingLines.informationSectionTitle=Informational messages in this Section
