--- a/build.properties
+++ b/build.properties
@@ -107,7 +107,6 @@ javadoc.max.memory=512M
 
 # application dependencies
 
-cas.application=cas
 rice.application=kr
 workflow.application=kew
 ksb.application=ksb
@@ -123,7 +122,11 @@ appserver.config.dir=${appserver.home}/conf
 appserver.localhost.dir=${appserver.config.dir}/Catalina/localhost
 appserver.work.dir=${appserver.home}/work/Catalina/localhost
 # tells the build what the base url is for the tomcat instance where the application will be deployed
-appserver.url=http://localhost:8080/
+
+application.http.scheme=http
+application.host=localhost
+http.port=8080
+appserver.url=${application.http.scheme}://${application.host}:${http.port}/
 
 # determines what ${build.environment} the KualiConfigurationService considers your production environment
 production.environment.code=prd
@@ -151,15 +154,6 @@ log4j.reload.minutes=5
 memory.monitor.threshold=.85
 # determines whether quartz (SchedulerService and scheduleJob) should be used for batch job scheduling and execution - impacts whether the batch scheduling ui works
 use.quartz.scheduling=true
-# determines whether the institutional user data is ever editable on the user document
-maintain.users.locally=true
-# determines whether the institutional user data is ever editable on the user document
-maintain.kfs.users.locally=true
-# determines whether cas requires that the application be secured via ssl
-require.https=false
-# determines whether the password field appears on the cas login screen and is validated
-# and controls the appearance of the password field on the user document when maintain.users.locally is true
-validate.password=false
 # whether to validate the DD upon startup
 data.dictionary.validate=true
 # values used in KFS-PURAP B2B functions - all values but user agent derived by build.xml based on build.environment
@@ -411,7 +405,6 @@ kns.cache.nonDatabaseComponent.max.age.seconds=3600
 # 3. CONFIGURATION MANAGEMENT PROPERTIES
 
 rice.name=rice
-rice.kns.name=kns
 rice.api.name=api
 rice.impl.name=impl
 rice.version=1.0.0-SNAPSHOT
@@ -428,6 +421,35 @@ rice.output.classes.directories=${rice.output.directories}classes/**/**
 dependencies.project.directory=${projects.directory}/${ant.project.name}-dependencies
 rice.project.directory=${projects.directory}/${rice.name}
 rice.web.directory=${rice.project.directory}/web/src/main/webapp
+
+# CAS Properties
+
+skip.local.cas.server=true
+
+# when using local CAS server
+cas.context.name=cas
+cas.context.file=context-cas.xml
+cas.war.file.name=kuali-cas-1.0.0.war
+cas.war.file.path=${basedir}/${build.appserver.directory}/${cas.war.file.name}
+
+# general CAS URLs - used to build web.xml for CAS client configuration
+#cas.url=${appserver.url}${cas.context.name}
+cas.url=https://test.kuali.org/cas-stg
+# this should be the host name and port if the KFS instance - no scheme or path
+cas.kfs.server.name=${application.http.scheme}://${application.host}:${http.port}
+cas.login.url=${cas.url}/login
+cas.validate.url=${cas.url}/serviceValidate
+
+# determines whether cas requires that the application be secured via ssl
+cas.require.https=false
+# determines whether the password field appears on the cas login screen and is validated
+cas.validate.password=false
+
+cas.datasource.username=${datasource.username}
+cas.datasource.password=${datasource.password}
+# commented out since the build process sets these dynamically 
+#cas.datasource.driver.class=${datasource.driver.class}
+#cas.datasource.url=${datasource.url}
 
 
 # 4. RELEASE PACKAGING PROPERTIES
