Just fixing a comment - The CAS 3 client wants the HTTP scheme

--- a/build.properties
+++ b/build.properties
@@ -435,7 +435,7 @@ cas.war.file.path=${basedir}/${build.appserver.directory}/${cas.war.file.name}
 # general CAS URLs - used to build web.xml for CAS client configuration
 #cas.url=${appserver.url}${cas.context.name}
 cas.url=https://test.kuali.org/cas-stg
-# this should be the host name and port if the KFS instance - no scheme or path
+# this should be the host name and port if the KFS instance - no path
 cas.kfs.server.name=${application.http.scheme}://${application.host}:${http.port}
 cas.login.url=${cas.url}/login
 cas.validate.url=${cas.url}/serviceValidate
