KFSMI-3951 : Fixed up properties so that developers can actually use the internal CAS server without editing build.properties

--- a/build.properties
+++ b/build.properties
@@ -424,7 +424,7 @@ rice.web.directory=${rice.project.directory}/web/src/main/webapp
 
 # CAS Properties
 
-skip.local.cas.server=true
+#deploy.local.cas.server=true
 
 # when using local CAS server
 cas.context.name=cas
