--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -925,6 +925,7 @@ error.vendorType.invalid=Invalid vendor type. You must select a vendor of type '
 error.debarred.vendor=The selected vendor is debarred and therefore cannot be used on this document. Please select a different vendor.
 error.inactive.vendor=The selected vendor is inactive and therefore cannot be used on this document. Please select a different vendor.
 error.nonexist.vendor=The vendor entered doesn't exist. Please choose from the list of existing vendors.
+error.nonexist.assignedUser=The assigned user entered doesn't exist. Please choose from the list of existing users.
 error.requisition.copy.expired.contract=The Requisition cannot be copied because its contract is expired.
 error.requisition.copy.inactive.vendor=The Requisition cannot be copied because its vendor is inactive.
 error.distribute.accounts.not.100.percent=The total percentage of all accounts to be distributed must equal 100%.
