KFSMI-3728: get the mail messages out there at least...

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2249,3 +2249,11 @@ message.report.yearEnd.organizationReversion.ledger.titleLine=O R G A N I Z A T 
 message.accountingLines.errorSectionTitle=Errors found in this Section
 message.accountingLines.warningSectionTitle=Warnings for this Section
 message.accountingLines.informationSectionTitle=Informational messages in this Section
+
+message.accountDerivedRole.principalInactivated.notification.subject=Role {0}-{1}: Principal {2} Inactivated
+message.accountDerivedRole.principalInactivated.fiscalOfficer.notification=The {0}-{1} {2} has been inactivated. The following accounts are affected\:\n\nActive Accounts\:\n{3}\n\nExpired Accounts\:{4}
+message.accountDerivedRole.principalInactivated.accountSupervisor.notification=The {0}-{1} {2} has been inactivated. The following accounts are affected\:\n\nActive Accounts\:\n{3}\n\nExpired Accounts\:{4}
+message.accountDerivedRole.principalInactivated.fiscalOfficerPrimaryDelegate.notification=The {0}-{1} {2} has been inactivated. The following account delegations have been inactivated.\n\nInactivated Account Delegations\n{3}\n\nAccount Delegations which could not be inactivated, due to maintenance document locking\n{4}
+message.accountDerivedRole.principalInactivated.fiscalOfficerSecondaryDelegate.notification=The {0}-{1} {2} has been inactivated. The following account delegations have been inactivated.\n\nInactivated Account Delegations\n{3}\n\nAccount Delegations which could not be inactivated, due to maintenance document locking\n{4}
+message.accountDerivedRole.principalInactivated.accountDelegateInactivatedInformation={0}-{1} {2} From: {3} To: {4}
+message.accountDerivedRole.principalInactivated.accountDelegateBlockedInactivationInformation={0}-{1} {2} From: {3} To: {4} blocked by document {5} 
