KFSMI-1222: update object code rules to handle inactivation blocks of non-inactivateables manually; add rule to balance type to handle inactivation blocks by offset definitions manually

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -40,6 +40,9 @@ error.document.objectCodeGlobalDetails.noChartFiscalYear=You must select at leas
 error.document.objectCodeGlobalDetails.noFiscalYear=You must select a Fiscal Year
 error.document.objectCodeGlobalDetails.noChart=You must select a Chart
 error.document.objectCodeGlobal.inactivationBlocking=The object code {0} cannot be inactivated because there are active records that reference it.  <a href="{1}" target="blank">Click here to view all records blocking the inactivation of this record.</a>
+error.document.objectCode.inactivationBlocking=The object code {0} {1} {2} cannot be inactivated because {3} instance(s) of {4} rely on its existence.
+
+error.document.balanceType.inactivationBlocking=The balance type code {0} cannot be inactivated because {1} instance(s) of {2} rely on its existence.
 
 # distinct errorParameters require distinct error keys, even if the error message is identical
 error.document.sourceSectionNoAccountingLines=The document must contain at least one accounting line in the "{0}" section.
