--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -332,6 +332,7 @@ error.member.none.selected=At least one member must be selected.
 error.member.already.assigned=This member is already associated with the role.
 error.member.fromamount.outofrange=From amount for a delegate cannot be lesser than that for its role member. 
 error.member.toamount.outofrange=To amount for a delegate cannot be greater than that for its role member.
+error.fromamount.greaterthan.toamount=From amount cannot be greater than to amount.
 
 # Kim Type Services error messages
 error.chart.or.org.notempty.all.required=If a chart code or an organization code is specified, then chart code, organization code, and namespace are all required.
