--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -161,6 +161,7 @@ error.document.accountMaintenance.closedAccount.noFundBalances = The Account mus
 error.document.accountMaintenance.closedAccount.noPendingLaborLedgerEntriesAllowed = The Account must have no pending abor lledger entries before it can be closed.
 error.document.accountMaintenance.userMustBeChartManagerOrRootManager = User must be Chart manager or Root Chart Manager.
 error.document.accountMaintenance.cgFieldsFilledInForNonCGAccount = The Sub-Fund Group {0} is not associated with Contracts and Grants; please do not fill in fields in the Contracts and Grants tab.
+error.document.accountMaintenance.invalidContractsAndGrantsResponsibility=The Contracts & Grants Responsibility Id {0} for Account {1}-{2} is not valid.
 
 # Fiscal Period Maintenance Errors
 error.document.fiscalPeriodMaintenance.yearDosntExist = The Fiscal Year doesn't exist.
