KULCAP-1341: Asset Edit - when setting in-service to close a construction in progress asset the (asset) Fiscal Year, Period should be updated.

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1946,6 +1946,7 @@ error.asset.retired.capital=To retire a capital asset you must issue a retiremen
 error.asset.retired.non.capital.active=To retire a Non-capital active asset please change the asset status to O Non-capital retired.
 error.asset.retired.act.non.capital.2003=To retire a Act Non-capital 2003 asset please change the asset status to E Ret Non-capital 2003.
 error.invalid.in.service.date=New In-Service Date has no valid University Fiscal Year defined.
+error.blank.in.service.date.disallowed=In-Service Date can not set to blank since this asset starts depreciation already.
 error.asset.fabrication.totalAmount.required=Fabrication estimated amount is a required field.
 error.asset.fabrication.totalAmount.negative=Fabrication estimated amount should be a positive amount.
 error.asset.fabrication.completionDate.required=Fabrication estimated completion date is a required field.
