--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1934,6 +1934,7 @@ message.batch.report.depreciation.heading.figures=Figures
 # ** End Batch errors/messages **
 
 message.batchUpload.title.pre.asset.tagging=Pre-Asset Tagging Batch.
+error.invalid.representative.id=The specified Asset Representative Principal Name does not exist.
 error.invalid.building.code=Building code {0} is not valid for campus code {1}.
 error.invalid.room.number={0}-{1}-{2} is not a valid room number.
 error.invalid.pre.tag.number=Tag number "{0}" already exists in the Database.
