KULRICE-3267 KFSMI-703 KFSMI-167

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1464,7 +1464,6 @@ message.batchUpload.title.collector=GL Collector Batch Upload
 message.batchUpload.title.enterprise.feeder=Enterprise Feeder Batch Upload
 message.batchUpload.title.einvoice=Electronic Invoice Batch Upload
 message.batchUpload.saveSuccessful=File was successfully saved
-message.batchUpload.deleteSuccessful=File was successfully deleted.
 error.batchUpload.deleteFailed.fileAlreadyProcessed=File could not be deleted because the file has already been processed.
 error.batchUpload.deleteFailed.fileSetAlreadyProcessed=Files could not be deleted because the file set has already been processed.
 error.batchUpload.deleteFailed.fileNotAuthorized=File could not be deleted because you are not authorized to delete the file.
@@ -2264,3 +2263,8 @@ message.accountDerivedRole.principalInactivated.fiscalOfficerPrimaryDelegate.not
 message.accountDerivedRole.principalInactivated.fiscalOfficerSecondaryDelegate.notification=The {0}-{1} {2} has been inactivated. The following account delegations have been inactivated.\n\nInactivated Account Delegations\n{3}\n\nAccount Delegations which could not be inactivated, due to maintenance document locking\n{4}
 message.accountDerivedRole.principalInactivated.accountDelegateInactivatedInformation={0}-{1} {2} From: {3} To: {4}
 message.accountDerivedRole.principalInactivated.accountDelegateBlockedInactivationInformation={0}-{1} {2} From: {3} To: {4} blocked by document {5} 
+
+question.batch.file.admin.delete.confirm=Are you sure you want to delete {0}?
+message.batch.file.admin.delete.successful={0} was successfully deleted.
+message.batch.file.admin.delete.error=An error occurred while deleting {0}.
+message.batch.file.admin.delete.cancelled={0} was NOT deleted.
