KULCAP-1346: Quantity disappeared from Capital Edit tab on PCard

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2197,6 +2197,8 @@ error.asset.create.new.allow.only = When moving an expense from a non-capital ob
 error.asset.new.or.update.only = Only enter data for either updating or creating a new asset.
 error.asset.active.capital.asset.required = Asset must be active Capital Asset.
 warning.gl.processed = The GL line you selected has been processed to CAMS.
+error.asset.tag.line.required = Asset tag line is required for creating new asset. Please use the add button to add asset tag line(s). 
+error.asset.quantity.not.matching.tag.lines = Asset Quantity doesn't match the number of asset tag lines. 
 #Lookup Messages
 title.return.url.value.prependtext=return value 
 title.action.url.value.prependtext=with 
