--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -877,6 +877,7 @@ errors.item.quantity.required={0} of {1} is invalid; since the po has a valid {2
 errors.item.quantity.tooMany={0} of {1} cannot be changed to more than {2}. 
 errors.item.amount.alreadyPaid=Further payment cannot be made on {0} because it has already been fully paid.
 errors.item.accounting.total={0} has invalid totals. The total percent of the accounts must equal 100%.
+errors.item.accounting.total.amount={0} has invalid totals. The total amount of the accounts must equal {1}.
 errors.item.percent=All {0}s of {1} must be whole numbers between 1-100; including no commas are allowed in numeric fields
 errors.item.accounting.rounding=The accounting dollars you have entered on accounting line {0} cannot be represented with the level of accuracy inherent in the system. The entry has been adjusted by {1}. If this system amount is not satisfactory, a GEC will need to be processed to adjust the accounting.
 errors.item.accounting.dollar.total={0} has invalid totals. The edited amount is {1}. The total of the accounting lines must equal {2}.
@@ -2264,7 +2265,7 @@ message.accountDerivedRole.principalInactivated.accountSupervisor.notification=T
 message.accountDerivedRole.principalInactivated.fiscalOfficerPrimaryDelegate.notification=The {0}-{1} {2} has been inactivated. The following account delegations have been inactivated.\n\nInactivated Account Delegations\n{3}\n\nAccount Delegations which could not be inactivated, due to maintenance document locking\n{4}
 message.accountDerivedRole.principalInactivated.fiscalOfficerSecondaryDelegate.notification=The {0}-{1} {2} has been inactivated. The following account delegations have been inactivated.\n\nInactivated Account Delegations\n{3}\n\nAccount Delegations which could not be inactivated, due to maintenance document locking\n{4}
 message.accountDerivedRole.principalInactivated.accountDelegateInactivatedInformation={0}-{1} {2} From: {3} To: {4}
-message.accountDerivedRole.principalInactivated.accountDelegateBlockedInactivationInformation={0}-{1} {2} From: {3} To: {4} blocked by document {5} 
+message.accountDerivedRole.principalInactivated.accountDelegateBlockedInactivationInformation={0}-{1} {2} From\: {3} To\: {4} blocked by document {5} 
 
 question.batch.file.admin.delete.confirm=Are you sure you want to delete {0}?
 message.batch.file.admin.delete.successful={0} was successfully deleted.
