--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1020,6 +1020,7 @@ requisition.nonAPO.requisition.contains.commodity.code.sensitive.data=Requisitio
 requisition.nonAPO.requisition.contains.restricted.commodity.code=Requisition contains an item with a restricted commodity code.
 requisition.nonAPO.missing.some.vendor.address.fields=Requisition does not have all of the vendor address fields that are required for Purchase Order.
 requisition.nonAPO.capital.asset.rules=Requisition has failed Capital Asset rules.
+requisition.nonAPO.accounting.line.capital.object.level=Requisition contains accounting line with capital object level
 requisition.nonAPO.outside.nextFY.approval.range=Requisition is set to encumber next fiscal year and approval is not within APO allowed date range.
 
 # Sensitive Data
