--- a/build.properties
+++ b/build.properties
@@ -503,3 +503,5 @@ periodic.thread.dump=true
 periodic.thread.dump.seconds=300
 
 validate.ebo.references=true
+
+report.writer.service.new.line.characters=\\n
