KULCAP-1365:  Small updates associated with validations.

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2107,6 +2107,17 @@ error.document.min.one.payment.required = At least one asset payment should be e
 error.capital.asset.manufacturer.name.required = Manufacturer name is a required for capital assets.
 error.acquisition.code.not.allowed = Current user can not use acquisition type code {0}.
 error.inactive.acquisition.code = The selected acquisition type code {0} is not active and cannot be used on asset.
+
+#***** Start Asset Edit Messages ***********
+error.owner.changed = The Owner cannot be changed.
+error.acquisition.type.code.changed = The Acquisition Type Code cannot be changed.
+error.asset.status.changed = The Asset Status Code cannot be changed.
+error.asset.condition.changed = The Asset Condition cannot be changed.
+error.type.code.changed = The Asset Type Code cannot be changed.
+error.financial.object.subtype.code.changed = The Financial Object Subtype Code cannot be changed.
+error.deprecation.method.code.changed = The Deprecation Method Code cannot be changed.
+#*********************************************
+
 error.asset.inventory.status.code.invalid = Asset Status code {0} is not allowed in this asset add screen.
 error.asset.owner.chart.code.invalid = Organization Owner Chart Of Accounts Code {0} doesn't exist.
 error.asset.owner.account.number.invalid = Organization Owner Account Number {0}/{1} doesn't exist.
