KULPURAP-4292 A warning is given to force the user to perform a calculate upon submission of requisition and purchase order documents.

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -982,6 +982,8 @@ error.invalidContractManagerCode={0} is not a valid contract manager code.
 error.apoContractManagerCodeChosen=The contract manager code used for automatic purchase orders, {0}, cannot be manually assigned to a purchase order.
 error.noContractManagerAssigned=No requisition has been assigned to a valid contract manager, either make an assignment or cancel the document.
 
+errors.purchasing.calculationRequired=This document must be calculated prior to submitting.
+
 errors.purchasing.percent.not.whole=The percent you entered ({0}) must be a whole number.
 error.purchaseOrder.alternateVendor.inactive=An alternate payee vendor must be an active vendor.
 error.purchaseOrder.alternateVendor.dvType=An alternate payee vendor must not be a DV-type vendor.
