--- a/build.properties
+++ b/build.properties
@@ -184,7 +184,7 @@ org/kuali/kfs/module/ec/spring-ec.xml,org/kuali/kfs/module/ld/spring-ld.xml,org/
 # the institution specific files that define the spring context for the application
 institution.spring.source.files=
 spring.source.files=${core.spring.source.files}${optional.module.spring.source.files}${institution.spring.source.files}
-kfs.rice.override.spring.files=spring-kfs-rice-overrides.xml
+base.kfs.rice.override.spring.files=spring-kfs-rice-overrides.xml
 # the core files that are included in the application spring context for unit testing
 core.spring.test.files=org/kuali/kfs/sys/spring-sys-test.xml,org/kuali/kfs/gl/spring-gl-test.xml
 optional.module.spring.test.files=,org/kuali/kfs/module/ar/spring-ar-test.xml,org/kuali/kfs/module/cam/spring-cam-test.xml,org/kuali/kfs/module/purap/spring-purap-test.xml
