--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2280,3 +2280,5 @@ question.batch.file.admin.delete.confirm=Are you sure you want to delete {0}?
 message.batch.file.admin.delete.successful={0} was successfully deleted.
 message.batch.file.admin.delete.error=An error occurred while deleting {0}.
 message.batch.file.admin.delete.cancelled={0} was NOT deleted.
+
+message.batch.log.email.body=See {0} for details.  To view the log, please use the Batch File lookup from the Administration tab.
