--- a/.classpath
+++ b/.classpath
@@ -5,101 +5,101 @@
 	<classpathentry kind="src" output="test/classes" path="test/unit/src"/>
 	<classpathentry kind="src" output="test/classes" path="test/integration/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="var" path="TOMCAT_LIB_HOME/servlet-api.jar"/>
-	<classpathentry kind="var" path="TOMCAT_LIB_HOME/jsp-api.jar"/>
-	<classpathentry kind="var" path="DRIVERS_DIRECTORY/ojdbc14.jar"/>
-	<classpathentry kind="var" path="DRIVERS_DIRECTORY/mysql-connector-java-5.0.5-bin.jar"/>
-	<classpathentry kind="lib" path="build/external/appserver/p6spy-1.3-patched.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/activation-1.0.2.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/avalon-framework-cvs-20020806.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/backport-util-concurrent-2.1.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/batik-1.6.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/c1searchengine.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/commons-beanutils-1.7.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/commons-codec-1.3.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/commons-collections-3.2.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/commons-dbcp-1.2.1.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/commons-digester-1.7.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/commons-fileupload-1.2.1.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/commons-httpclient-3.0.1.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/commons-io-1.4.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/commons-logging-1.1.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/commons-pool-1.2.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/db-ojb-1.0.4-kuali-mods-debug.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/displaytag-1.1.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/dwr-1.1.4.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/fop-0.20.5.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/itext-1.4.8.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/mail-1.4.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/jaxrpc-1.1.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/jdom-1.0.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/jsearch.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/oscache-2.3.2.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/quartz-1.6.0.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/saaj-1.2.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/spring-2.0.4.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/spring-modules-ojb-0.6.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/struts-1.2.9.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/struts-el-1.2.9.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/taglibs-jstl-1.1.2.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/taglibs-standard-1.1.2.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/xalan-2.7.0.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/xalan-serializer-2.7.0.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/xercesImpl-2.7.1.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/xml-apis-1.3.02.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/xstream-1.2.2.jar"/>
-	<classpathentry kind="lib" path="test/lib/junit-3.8.1.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/xpp3_min-1.1.3.4.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/jasperreports-2.0.4.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/commons-lang-2.3.jar"/>
-	<classpathentry kind="lib" path="build/external/appserver/commons-cli-1.0.jar"/>
-	<classpathentry kind="lib" path="build/external/appserver/commons-logging.jar"/>
-	<classpathentry kind="lib" path="build/external/appserver/connector-1_5.jar"/>
-	<classpathentry kind="lib" path="build/external/appserver/howl.jar"/>
-	<classpathentry kind="lib" path="build/external/appserver/jotm_iiop_stubs.jar"/>
-	<classpathentry kind="lib" path="build/external/appserver/jotm_jrmp_stubs.jar"/>
-	<classpathentry kind="lib" path="build/external/appserver/jotm.jar"/>
-	<classpathentry kind="lib" path="build/external/appserver/jta-spec1_0_1.jar"/>
-	<classpathentry kind="lib" path="build/external/appserver/jts1_0.jar"/>
-	<classpathentry kind="lib" path="build/external/appserver/objectweb-datasource.jar"/>
-	<classpathentry kind="lib" path="build/external/appserver/ow_carol.jar"/>
-	<classpathentry kind="lib" path="build/external/appserver/xapool.jar"/>
-	<classpathentry kind="lib" path="build/log4j-1.2.14.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/hibernate-3.2.6.ga.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/hibernate-annotations-3.3.0.ga.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/hibernate-commons-annotations-3.0.0.ga.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/hibernate-entitymanager-3.3.1.ga.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/hibernate-validator-3.0.0.ga.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/javassist-3.3.ga.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/jboss-common-core-2.0.4.GA.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/persistence-api-1.0.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/cxf-2.1.3.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/jaxb-api-2.1.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/jaxb-impl-2.1.7.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/jaxb-xjc-2.1.7.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/FastInfoset-1.2.2.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/geronimo-activation_1.1_spec-1.0.2.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/geronimo-annotation_1.0_spec-1.1.1.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/geronimo-jaxws_2.1_spec-1.0.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/geronimo-stax-api_1.0_spec-1.0.1.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/geronimo-ws-metadata_2.0_spec-1.1.2.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/neethi-2.0.4.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/saaj-api-1.3.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/saaj-impl-1.3.2.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/velocity-1.5.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/wstx-asl-3.2.6.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/xml-resolver-1.2.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/asm-2.2.3.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/cglib-nodep-2.1_3.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/opensaml-1.1.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/wsdl4j-1.6.2.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/wss4j-1.5.4.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/XmlSchema-1.4.2.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/xmlsec-1.4.0.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/jaxen-1.1.1.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/rice-api-1.0.0-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/rice-impl-1.0.0-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/bcprov-jdk15-133.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/cas-client-core-3.1.6.jar"/>
+	<classpathentry exported="true" kind="var" path="TOMCAT_LIB_HOME/servlet-api.jar"/>
+	<classpathentry exported="true" kind="var" path="TOMCAT_LIB_HOME/jsp-api.jar"/>
+	<classpathentry exported="true" kind="var" path="DRIVERS_DIRECTORY/ojdbc14.jar"/>
+	<classpathentry exported="true" kind="var" path="DRIVERS_DIRECTORY/mysql-connector-java-5.0.5-bin.jar"/>
+	<classpathentry exported="true" kind="lib" path="build/external/appserver/p6spy-1.3-patched.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/activation-1.0.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/avalon-framework-cvs-20020806.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/backport-util-concurrent-2.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/batik-1.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/c1searchengine.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/commons-beanutils-1.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/commons-codec-1.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/commons-collections-3.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/commons-dbcp-1.2.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/commons-digester-1.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/commons-fileupload-1.2.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/commons-httpclient-3.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/commons-io-1.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/commons-logging-1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/commons-pool-1.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/db-ojb-1.0.4-kuali-mods-debug.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/displaytag-1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/dwr-1.1.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/fop-0.20.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/itext-1.4.8.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/mail-1.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/jaxrpc-1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/jdom-1.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/jsearch.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/oscache-2.3.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/quartz-1.6.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/saaj-1.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/spring-2.0.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/spring-modules-ojb-0.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/struts-1.2.9.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/struts-el-1.2.9.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/taglibs-jstl-1.1.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/taglibs-standard-1.1.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/xalan-2.7.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/xalan-serializer-2.7.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/xercesImpl-2.7.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/xml-apis-1.3.02.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/xstream-1.2.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="test/lib/junit-3.8.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/xpp3_min-1.1.3.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/jasperreports-2.0.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/commons-lang-2.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="build/external/appserver/commons-cli-1.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="build/external/appserver/commons-logging.jar"/>
+	<classpathentry exported="true" kind="lib" path="build/external/appserver/connector-1_5.jar"/>
+	<classpathentry exported="true" kind="lib" path="build/external/appserver/howl.jar"/>
+	<classpathentry exported="true" kind="lib" path="build/external/appserver/jotm_iiop_stubs.jar"/>
+	<classpathentry exported="true" kind="lib" path="build/external/appserver/jotm_jrmp_stubs.jar"/>
+	<classpathentry exported="true" kind="lib" path="build/external/appserver/jotm.jar"/>
+	<classpathentry exported="true" kind="lib" path="build/external/appserver/jta-spec1_0_1.jar"/>
+	<classpathentry exported="true" kind="lib" path="build/external/appserver/jts1_0.jar"/>
+	<classpathentry exported="true" kind="lib" path="build/external/appserver/objectweb-datasource.jar"/>
+	<classpathentry exported="true" kind="lib" path="build/external/appserver/ow_carol.jar"/>
+	<classpathentry exported="true" kind="lib" path="build/external/appserver/xapool.jar"/>
+	<classpathentry exported="true" kind="lib" path="build/log4j-1.2.14.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/hibernate-3.2.6.ga.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/hibernate-annotations-3.3.0.ga.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/hibernate-commons-annotations-3.0.0.ga.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/hibernate-entitymanager-3.3.1.ga.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/hibernate-validator-3.0.0.ga.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/javassist-3.3.ga.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/jboss-common-core-2.0.4.GA.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/persistence-api-1.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/cxf-2.1.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/jaxb-api-2.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/jaxb-impl-2.1.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/jaxb-xjc-2.1.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/FastInfoset-1.2.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/geronimo-activation_1.1_spec-1.0.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/geronimo-annotation_1.0_spec-1.1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/geronimo-jaxws_2.1_spec-1.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/geronimo-stax-api_1.0_spec-1.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/geronimo-ws-metadata_2.0_spec-1.1.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/neethi-2.0.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/saaj-api-1.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/saaj-impl-1.3.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/velocity-1.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/wstx-asl-3.2.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/xml-resolver-1.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/asm-2.2.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/cglib-nodep-2.1_3.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/opensaml-1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/wsdl4j-1.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/wss4j-1.5.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/XmlSchema-1.4.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/xmlsec-1.4.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/jaxen-1.1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/rice-api-1.0.0-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/rice-impl-1.0.0-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/bcprov-jdk15-133.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/cas-client-core-3.1.6.jar"/>
 	<classpathentry kind="output" path="work/web-root/WEB-INF/classes"/>
 </classpath>
