--- a/.classpath
+++ b/.classpath
@@ -101,5 +101,6 @@
 	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/rice-impl-1.0.0-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/bcprov-jdk15-133.jar"/>
 	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/cas-client-core-3.1.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="work/web-root/WEB-INF/lib/opencsv-1.8.jar"/>
 	<classpathentry kind="output" path="work/web-root/WEB-INF/classes"/>
 </classpath>
