--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2228,6 +2228,7 @@ message.batch.balancing.failure.count=Total failure count for %s is %d. Only up 
 message.batch.balancing.record.before.fiscal.year=Record before universityFiscalYear=%d
 message.batch.balancing.record.failed.balancing=Failed %s balancing
 message.batch.balancing.report.unknown.label=<Unknown Label>
+message.batch.balancing.history.purged=History tables purged.
 message.ld.balancing.report.entry.label=LLEN
 message.ld.balancing.report.balance.label=LLBL
 message.gl.balancing.report.entry.label=GLEN
